--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   .qr-code-container {
     background-color: hsl(0, 0%, 100%);
     border-radius: 20px;
-    height: 550px;
+    height: 500px;
     width: 340px;
   }
 
@@ -24,7 +24,7 @@ body {
   .image {
     border-radius: 20px;
     width: 300px;
-    height: 300px;
+    height: 250px;
   }
 
   h3,
@@ -41,4 +41,5 @@ body {
 
   h3 {
     font-size: 1.5rem;
+    color: hsl(218, 44%, 22%);
   }
